--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "airbnb-base",
+    "plugins": ["jest"],
+    "extends": ["airbnb-base", "plugin:jest/recommended"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
