--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
     "husky": "^8.0.0",
     "jest": "^29.6.2",
     "lint-staged": "^13.2.3"
