--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint-staged": "^13.2.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2"
   },
   "lint-staged": {
