--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "osmtogeojson": "^3.0.0-beta.5"
   },
   "lint-staged": {
     "{src,tests}/**/*.{js,jsx,ts,tsx}": [
