--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "osmtogeojson": "^3.0.0-beta.5"
   },
   "lint-staged": {
