--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev:start": "nodemon src/app.js",
-    "test": "jest --coverage",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "lint": "lint-staged",
     "prepare": "husky install"
   },
@@ -15,13 +15,17 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@jest/globals": "^29.6.2",
+    "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "^27.2.3",
     "husky": "^8.0.0",
     "jest": "^29.6.2",
-    "lint-staged": "^13.2.3"
+    "lint-staged": "^13.2.3",
+    "mocked-env": "^1.3.5",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "axios": "^1.4.0",
