--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Express application to get geojson features of a location",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev:start": "nodemon src/app.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "lint": "lint-staged",
